[gd_scene load_steps=78 format=2]

[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/leg_L/chicleg_walk.png" type="Texture" id=1]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/mouth/mouth_singing.png" type="Texture" id=2]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/mouth/mouth_smiling.png" type="Texture" id=3]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/wings/bee_wings_idle.png" type="Texture" id=4]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/body/body_walk.png" type="Texture" id=5]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/leg_R/cat_leg_idle.png" type="Texture" id=6]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/arm/arm_push.png" type="Texture" id=7]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/mouth/mount_whistling.png" type="Texture" id=8]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/arm/arm_idle.png" type="Texture" id=9]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/leg_L/chicleg_idle 2.png" type="Texture" id=10]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/mouth/mouth_growling.png" type="Texture" id=11]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/leg_R/cat_leg_walk.png" type="Texture" id=12]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/wings/bee_wings_fly.png" type="Texture" id=13]
[ext_resource path="res://player/Player.gd" type="Script" id=14]
[ext_resource path="res://assets/art/sounds/sound_mouth_growl.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/art/sounds/sound_mouth_singing.ogg" type="AudioStream" id=16]
[ext_resource path="res://assets/art/sounds/sound_mouth_whistle.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/art/character sprite sheet/avatar_sprite_sheets/mouth/Mouth yawn frames.png" type="Texture" id=18]
[ext_resource path="res://assets/art/sounds/sound_mouth_yawn.ogg" type="AudioStream" id=19]
[ext_resource path="res://assets/art/sounds/sound_jump.ogg" type="AudioStream" id=20]

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2048, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=61]
animations = [ {
"frames": [ SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "push",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 49.3853, 39.9493 )

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 45.1475, 39.6513 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2048, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2560, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3072, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3584, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4096, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "leg_left_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "leg_left_walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 2048, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 2560, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 3072, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 3584, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 4096, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=90]
animations = [ {
"frames": [ SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "leg_right_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "leg_right_walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 2048, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=93]
animations = [ {
"frames": [ SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "wings_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "wings_fly",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=94]
extents = Vector2( 210.424, 50.2455 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 118, 122 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 87, 74 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 111, 135 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=102]
animations = [ {
"frames": [ SubResource( 95 ) ],
"loop": true,
"name": "growl",
"speed": 5.0
}, {
"frames": [ SubResource( 96 ) ],
"loop": true,
"name": "whistle",
"speed": 5.0
}, {
"frames": [ SubResource( 97 ) ],
"loop": true,
"name": "yawn",
"speed": 5.0
}, {
"frames": [ SubResource( 98 ) ],
"loop": true,
"name": "sing",
"speed": 5.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ) ],
"loop": true,
"name": "default_smile",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 14 )

[node name="arms" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 17
__meta__ = {
"_edit_lock_": true
}

[node name="arm_R" type="AnimatedSprite" parent="arms"]
position = Vector2( 185.989, -29.2331 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 61 )
animation = "push"
__meta__ = {
"_edit_lock_": true
}

[node name="arm_L" type="AnimatedSprite" parent="arms"]
visible = false
position = Vector2( -188.515, -35.6202 )
scale = Vector2( 0.510711, 0.46639 )
frames = SubResource( 61 )
animation = "push"
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Collision_R" type="CollisionShape2D" parent="arms"]
position = Vector2( 241.558, -20.8912 )
shape = SubResource( 62 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Collision_L" type="CollisionShape2D" parent="arms"]
position = Vector2( -247.914, -29.665 )
shape = SubResource( 63 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="body" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 66 )
frame = 1
speed_scale = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="leg_L" type="AnimatedSprite" parent="."]
position = Vector2( -34.8428, 152.905 )
scale = Vector2( 0.533, 0.568 )
frames = SubResource( 78 )
animation = "leg_left_walk"
__meta__ = {
"_edit_lock_": true
}

[node name="leg_R" type="AnimatedSprite" parent="."]
position = Vector2( 57.0841, 151.77 )
scale = Vector2( 0.36, 0.375 )
frames = SubResource( 90 )
animation = "leg_right_walk"
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="wings" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="wings"]
position = Vector2( -2.24114, -41.5938 )
scale = Vector2( 0.99, 0.78 )
frames = SubResource( 93 )
animation = "wings_fly"
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Sound" type="AudioStreamPlayer2D" parent="wings"]
position = Vector2( -2.24114, -41.5938 )
scale = Vector2( 0.99, 0.78 )
stream = ExtResource( 20 )
volume_db = -5.0
__meta__ = {
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="wings"]
visible = false
position = Vector2( -8.47571, -120.779 )
shape = SubResource( 94 )

[node name="mouth" type="AnimatedSprite" parent="."]
position = Vector2( 3.80614, 21.394 )
scale = Vector2( 1.03, 0.91 )
frames = SubResource( 102 )
animation = "default_smile"
frame = 1
speed_scale = 0.1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="growl" type="AudioStreamPlayer2D" parent="mouth"]
position = Vector2( -3.69528, -23.5099 )
scale = Vector2( 0.970874, 1.0989 )
stream = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="singing" type="AudioStreamPlayer2D" parent="mouth"]
position = Vector2( -3.69528, -23.5099 )
scale = Vector2( 0.970874, 1.0989 )
stream = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="whistle" type="AudioStreamPlayer2D" parent="mouth"]
position = Vector2( -3.69528, -23.5099 )
scale = Vector2( 0.970874, 1.0989 )
stream = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="yawn" type="AudioStreamPlayer2D" parent="mouth"]
position = Vector2( -3.69528, -23.5099 )
scale = Vector2( 0.970874, 1.0989 )
stream = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.2, 1.2 )
smoothing_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 103.999, -9.53366, 87.1618, -43.2075, 18.6916, -81.3712, -32.9417, -78.0039, -81.2075, -49.9423, -105.902, -3.92136, -103.657, 45.467, -81.2075, 70.1611, -74.4727, 78.0184, -117.126, 136.386, -117.126, 228, -65.493, 228, -0.39, 228, 9.712, 228, 119.713, 228, 120.836, 163.326, 73.6922, 84.7531, 107.711, 34.891 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="arms" to="." method="_on_arms_body_entered"]
[connection signal="animation_finished" from="arms/arm_R" to="." method="_on_arm_R_animation_finished"]
[connection signal="animation_finished" from="arms/arm_L" to="." method="_on_arm_L_animation_finished"]
[connection signal="body_entered" from="wings" to="." method="_on_wings_body_entered"]
[connection signal="finished" from="mouth/growl" to="." method="_on_sound_growl_finished"]
[connection signal="finished" from="mouth/singing" to="." method="_on_sound_singing_finished"]
[connection signal="finished" from="mouth/whistle" to="." method="_on_sound_whistle_finished"]
[connection signal="finished" from="mouth/yawn" to="." method="_on_sound_yawn_finished"]
